methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:49: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.PatternPicture'
override def run() {
             ^